@@ -1,0 +1,6 @@
+! Problem reported by Jim on 7 Jul 2002
+module test
+real*8 ::     &
+para_a,       & ! para_a is ...
+para_b,       & ! para_b is ...
+para_c          ! para_c is ...
